src/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@800&display=swap');

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

html {
	scroll-behavior: auto;
}

body {
	background: #121212;
}

p {
	color: white;
	font-family: "Mulish", sans-serif;
}

h1 {
	color: white;
	font-family: "Unbounded", sans-serif;
}

section#welcome > .heading, .sub-heading {
	display: inline;
	animation: jump 3s infinite cubic-bezier(0.45, 0.05, 0.55, 0.95);
}
section#welcome span {
	display: inline-block;
	font-family: "Unbounded", sans-serif;
	color: white;
	animation: jump 3s infinite cubic-bezier(0.45, 0.05, 0.55, 0.95);	
	animation-delay: var(--time);
}
section#welcome > .heading > span {
	font-size: 7rem;
}
section#welcome > .sub-heading > span {
	font-size: 3rem;
	margin-top: 32px;
}

h1.section-title {
	font-size: 4rem;
	margin-top: 10vh;
}

/* Стили для каждой секции  */
section {
	width: 100%;
	height: 100vh;
}


section#welcome {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}
section#welcome > h1 {
	font-size: 7rem;
	color: white;
	font-family: "Unbounded", sans-serif;
}
section#welcome > p {
	font-family: "Unbounded", sans-serif;
	font-size: 3rem;
	margin: 16px;
}


section#video {
	display: flex;
	justify-content: center;
	align-items: center;
}

/* Гриды */
section > .grid {
	margin: 0 10px;
	display: grid;
	grid-gap: 10px;
	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
	grid-template-rows: repeat(2, 200px);
	grid-auto-flow: dense;
}


section > .grid > .block {
	background: red;
	border-radius: 10px;
}
section > .grid > .block.large {
	grid-column: span 2;
	width: 100%;
	height: 100%;
	object-fit: cover;
	object-position: center;
	display: flex;
  	justify-content: center;
}
section > .grid > .block.small {
	grid-column: span 1;
	width: 100%;
	height: 100%;
	object-position: left;
	object-fit: cover;
	display: flex;
    justify-content: center;
}

/* Слайдер о команде */
section > .row {
	display: flex;
	align-items: center;
	justify-content: space-between;
	width: 100%;
	max-width: 1200px;
	margin: 0 auto;
	margin-bottom: 32px;
	margin-top: 64px;
}
section > .row > .navigation-buttons {
	display: flex;
}
section > .row > .navigation-buttons > p {
	padding: 16px;
	cursor: pointer;
	transition: all .25s ease-in-out;
	border-radius: 16px;
}
section > .row > .navigation-buttons > p:hover {
	transform: translateY(-4px);
	background: rgba(255, 255, 255, 0.2);
}

@media only screen and (max-width: 425px) {
	section#achivements > .all > .block.large {
		grid-column: span 1;
	}

	section#achivements > .all > .block.small {
		grid-column: span 1;
	}
}

/* Navigation  */
nav {
	background: rgba(0, 0, 0, .5);
	z-index: 100;
	width: 100%;
	display: flex;
	position: fixed;
	top: 0;
	left: 0;
	backdrop-filter: blur(8px);
}
nav > a {
	color: white;
	text-decoration: none;
	padding: 16px;
	font-family: "Mulish", sans-serif;
	transition: all .25s ease-in-out;
}
nav > a:hover {
/*	color: red;*/
	transform: translateY(-4px);
}
nav > .logo {
	color: red;
	padding: 16px;
	font-family: "Unbounded";
}


@media only screen and (max-width: 1440px) {
	section#welcome > .heading > span {
		font-size: 6rem;
	}
	section#welcome > .sub-heading > span {
		font-size: 3rem;
		margin-top: 32px;
	}

	h1.section-title {
		font-size: 2rem;
		margin-top: 10vh;
	}
}

@media only screen and (max-width: 1200px) {
	section#welcome > h1 {
		font-size: 2rem;
	}
	section#welcome > p {
		font-size: 1rem;
	}
}

@media only screen and (max-width: 1024px) {
	section#welcome > .heading > span {
		font-size: 4rem;
	}
	section#welcome > .sub-heading > span {
		font-size: 2rem;
		margin-top: 32px;
	}

	h1.section-title {
		font-size: 2rem;
		margin-top: 10vh;
	}

	section#video > iframe {
		margin: 0 auto;
		width: calc(100vw - 64px);
		height: auto;
	}
}

@media only screen and (max-width: 768px) {
	section#welcome > .heading {
		width: 100vw;
		text-align: center;
	}
	section#welcome > .sub-heading > span {
		font-size: 1.5rem;
		margin-top: 16px;
	}

	/* Navigation  */
	nav {
		background: rgba(0, 0, 0, .5);
		z-index: 100;
		width: 100%;
		display: flex;
		position: fixed;
		top: 0;
		left: 0;
		backdrop-filter: blur(8px);
	}
	nav > a {
		color: white;
		text-decoration: none;
		padding: 16px;
		font-family: "Mulish", sans-serif;
		transition: all .25s ease-in-out;
	}
	nav > a:hover {
	/*	color: red;*/
		transform: translateY(-4px);
	}
	nav > .logo {
		color: red;
		padding: 16px;
		font-family: "Unbounded";
	}
}


/* Animations  */
@keyframes jump {
	from {
		transform: translateY(-8px);
	}
	50% {
		transform: translateY(8px);
	}
	to {
		transform: translateY(-8px);
	}
}

@keyframes arrow-down {
	0%, 100% {
        transform: translateY(0px);
    }

    25% {
        transform: translateY(35px);
    }
}

